manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: it-employee
spec:
  selector:
    app: employee-service
  ports:
    - port: 80
      targetPort: 8080
